Time: 1 ms (88.71%), Space: 42.5 MB (87.96%) - LeetHub